# fstart

./: .gitignore  AGENTS.md  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README  README.md  flake.nix  inline_asm.md  opencode.json  rust-toolchain.toml
.github/workflows/: build-test.yml  ci.yml
.opencode/plans/: phase1-foundation.md
boards/bananapi-m1/: board.ron  sun7i-a20-bananapi.dtb  zImage
boards/foxconn-d41s/: board.ron
boards/foxconn-d41s-uefi/: board.ron
boards/lenovo-x61/: board.ron
boards/licheerv-dock/: board.ron
boards/licheerv-dock-uefi/: board.ron
boards/milkv-pioneer/: board.ron
boards/orangepi-pc2/: board.ron
boards/orangepi-r1/: board.ron
boards/qemu-aarch64/: board.ron
boards/qemu-aarch64-flex/: board.ron
boards/qemu-aarch64-multi/: board.ron
boards/qemu-aarch64-uefi/: board.ron
boards/qemu-armv7/: board.ron
boards/qemu-q35/: board.ron
boards/qemu-q35-uefi/: board.ron
boards/qemu-riscv64/: board.ron
boards/qemu-riscv64-flex/: board.ron
boards/qemu-riscv64-multi/: board.ron
boards/qemu-riscv64-uefi/: board.ron  keys
boards/qemu-sbsa/: board.ron
boards/sifive-unmatched/: board.ron  kernel_config.txt
boards/sifive-unmatched-hw/: board.ron
builder/: Cargo.toml
builder/src/: dtfs.rs  hashing.rs  lib.rs  signing.rs
builder/test-data/: ed25519.secret  ml_dsa44.secret  ml_dsa65.secret  ml_dsa87.secret  raw_bin_test.dts
ci/: build-payloads.sh  kernel-aarch64.config  kernel-armv7.config  kernel-riscv64.config
console/: Cargo.toml
console/src/: block-con.rs  fun-con.rs  hub.rs  lib.rs  sink.rs
crates/fstart-acpi/: Cargo.toml
crates/fstart-acpi-macros/: Cargo.toml
crates/fstart-acpi/src/: dbg2.rs  device.rs  gtdt.rs  iort.rs  lib.rs  sbsa.rs  sink.rs  spcr.rs  tock_bridge.rs
crates/fstart-acpi/src/descriptors/: gpio.rs  i2c.rs  mod.rs  spi.rs
crates/fstart-acpi/src/devices/: mod.rs
crates/fstart-acpi/src/ext/: break_op.rs  cond_ref_of.rs  inc_dec.rs  logical.rs  mod.rs  sleep.rs  thermal_zone.rs
crates/fstart-acpi/src/platform/: arm.rs  mod.rs  x86.rs
crates/fstart-acpi/tests/: acpi_dsl.rs
crates/fstart-alloc/: Cargo.toml
crates/fstart-arch/: Cargo.toml
crates/fstart-arch-x86/: Cargo.toml
crates/fstart-capabilities/: Cargo.toml
crates/fstart-capabilities/src/: acpi.rs  fdt_patch.rs  fit.rs  handoff.rs  lib.rs  next_stage.rs  smbios.rs
crates/fstart-codegen/: Cargo.toml
crates/fstart-codegen/src/: lib.rs  linker.rs  ron_loader.rs  stage_gen.rs
crates/fstart-codegen/src/stage_gen/: board_gen.rs  capabilities.rs  config_ser.rs  flexible.rs  mod.rs  plan_gen.rs  registry.rs  tests.rs  tokens.rs  topology.rs  validation.rs
crates/fstart-codegen/src/stage_gen/capabilities/: acpi.rs  mod.rs  payload.rs  smbios.rs  stage_load.rs
crates/fstart-codegen/tests/: acpi_dump.rs
crates/fstart-cpu-intel/: Cargo.toml
crates/fstart-cpu-intel/src/: core2.rs  core2_cpu.rs  lib.rs
crates/fstart-cpu-intel/src/pineview/: acpi.rs  mod.rs
crates/fstart-cpu-pineview/: Cargo.toml
crates/fstart-cpu-pineview/src/: lib.rs
crates/fstart-crabefi/: Cargo.toml
crates/fstart-crabefi/src/: lib.rs
crates/fstart-crypto/: Cargo.toml
crates/fstart-crypto/src/: digest.rs  lib.rs  verify.rs
crates/fstart-device-registry/: Cargo.toml
crates/fstart-device-registry/src/: lib.rs
crates/fstart-driver-bochs-display/: Cargo.toml
crates/fstart-driver-bochs-display/src/: lib.rs
crates/fstart-driver-designware-i2c/: Cargo.toml
crates/fstart-driver-designware-i2c/src/: lib.rs
crates/fstart-driver-fu740-ddr/: Cargo.toml
crates/fstart-driver-fu740-prci/: Cargo.toml
crates/fstart-driver-i2c-ck505/: Cargo.toml
crates/fstart-driver-i2c-ck505/src/: lib.rs
crates/fstart-driver-intel-gm965/: Cargo.toml
crates/fstart-driver-intel-gm965/src/: lib.rs  raminit.rs
crates/fstart-driver-intel-ich7/: Cargo.toml
crates/fstart-driver-intel-ich7/src/: lib.rs
crates/fstart-driver-intel-ich8/: Cargo.toml
crates/fstart-driver-intel-ich8/src/: lib.rs
crates/fstart-driver-intel-pineview/: Cargo.toml
crates/fstart-driver-intel-pineview/src/: lib.rs  regs.rs
crates/fstart-driver-intel-pineview/src/raminit/: jedec.rs  mmap.rs  mod.rs  phy.rs  rcomplut.rs  spd.rs  timing.rs
crates/fstart-driver-ite8721f/: Cargo.toml
crates/fstart-driver-ns16550/: Cargo.toml
crates/fstart-driver-ns16550/src/: lib.rs
crates/fstart-driver-nsc-pc87382/: Cargo.toml
crates/fstart-driver-nsc-pc87392/: Cargo.toml
crates/fstart-driver-pci-ecam/: Cargo.toml
crates/fstart-driver-pci-ecam/src/: lib.rs
crates/fstart-driver-pl011/: Cargo.toml
crates/fstart-driver-pl011/src/: acpi_support.rs  lib.rs
crates/fstart-driver-q35-hostbridge/: Cargo.toml
crates/fstart-driver-q35-hostbridge/src/: lib.rs
crates/fstart-driver-qemu-fw-cfg/: Cargo.toml
crates/fstart-driver-qemu-fw-cfg/src/: lib.rs
crates/fstart-driver-sunxi-ccu/: Cargo.toml
crates/fstart-driver-sunxi-ccu/src/: lib.rs
crates/fstart-driver-sunxi-d1-ccu/: Cargo.toml
crates/fstart-driver-sunxi-d1-ccu/src/: lib.rs
crates/fstart-driver-sunxi-d1-dramc/: Cargo.toml
crates/fstart-driver-sunxi-d1-dramc/src/: lib.rs
crates/fstart-driver-sunxi-h3-ccu/: Cargo.toml
crates/fstart-driver-sunxi-h3-ccu/src/: lib.rs
crates/fstart-driver-sunxi-h3-mmc/: Cargo.toml
crates/fstart-driver-sunxi-h3-mmc/src/: lib.rs
doc/: design_document.org  design_document_updated.org  dtfs.org  gpt5_2_plan.org  implementation_plan.org  implementation_plan_gemini3.org  implementation_plan_v2.org  plan_prompt.org  prompt.org  uncategorized_ideas.org
docs/: architecture.md  continuation-plan.md  driver-model.md  smm.md  unified-region-model.md  user-guide.md
fit/: qemu-aarch64.its  qemu-riscv64.its
fs/: Cargo.toml
fs/src/: config.rs  lib.rs  metadata.rs  test.rs
fs/src/crypto/: double.rs  ed25519.rs  fullread.rs  ml_dsa.rs  mod.rs
fs/test-data/: dtfs.dtb  dtfs.dtb.ed25519+ml_dsa44.sig  dtfs.dtb.ed25519.sig  dtfs.dtb.ml_dsa44.sig  ed25519.pub  ml_dsa44.pub
xtask/: Cargo.toml
xtask/src/: assemble.rs  build_board.rs  fip.rs  inspect.rs  main.rs  qemu.rs
(+185 files in other folders)
