[workspace]
resolver = "2"
members = [
    "xtask",
    "crates/fstart-types",
    "crates/fstart-codegen",
    "crates/fstart-ffs",
    "crates/fstart-crypto",
    "crates/fstart-mmio",
    "crates/fstart-services",
    "crates/fstart-arch",
    "crates/fstart-capabilities",
    "crates/fstart-alloc",
    "crates/fstart-log",
    "crates/fstart-runtime",
    "crates/fstart-platform-riscv64",
    "crates/fstart-platform-aarch64",
    "crates/fstart-platform-armv7",
    "crates/fstart-soc-sunxi",
    "crates/fstart-sunxi-ccu-regs",
    "crates/fstart-sunxi-pio",
    "crates/fstart-driver-ns16550",
    "crates/fstart-driver-pl011",
    "crates/fstart-driver-designware-i2c",
    "crates/fstart-driver-sunxi-ccu",
    "crates/fstart-driver-sunxi-a20-dramc",
    "crates/fstart-driver-sunxi-mmc",
    "crates/fstart-driver-sunxi-spi",
    "crates/fstart-driver-sunxi-h3-ccu",
    "crates/fstart-driver-sunxi-h3-dramc",
    "crates/fstart-driver-sunxi-d1-ccu",
    "crates/fstart-driver-sunxi-d1-dramc",
    "crates/fstart-driver-sifive-uart",
    "crates/fstart-driver-fu740-prci",
    "crates/fstart-driver-fu740-ddr",
    "crates/fstart-driver-pci-ecam",
    "crates/fstart-driver-bochs-display",
    "crates/fstart-device-registry",
    "crates/fstart-crabefi",
    "crates/fstart-stage",
    "crates/fstart-fit",
    "crates/fstart-acpi",
    "crates/fstart-acpi-macros",
    "crates/fstart-smbios",
    "crates/fstart-pio",
    "crates/fstart-platform-x86_64",
    "crates/fstart-driver-qemu-fw-cfg",
    "crates/fstart-driver-q35-hostbridge",
    "crates/fstart-superio",
    "crates/fstart-driver-ite8721f",
    "crates/fstart-driver-intel-pineview",
    "crates/fstart-driver-intel-ich7",
    "crates/fstart-driver-i2c-ck505",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
ron = "0.8"

# Crypto (RustCrypto)
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["fast"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

# Embedded / no_std utilities
embedded-hal = { version = "1", default-features = false }
heapless = { version = "0.8", features = ["serde"] }
ufmt = { version = "0.2", default-features = false }
bitflags = "2"
tock-registers = "0.10"

# Device tree
dtoolkit = { version = "0.1", default-features = false }

# Compression
lz4_flex = { version = "0.11", default-features = false }

# ELF parsing (host-side only)
goblin = { version = "0.10", default-features = false, features = ["elf32", "elf64", "endian_fd"] }

# xtask / host-side
clap = { version = "4", features = ["derive"] }

# Internal workspace crates
fstart-types = { path = "crates/fstart-types" }
fstart-codegen = { path = "crates/fstart-codegen" }
fstart-ffs = { path = "crates/fstart-ffs" }
fstart-crypto = { path = "crates/fstart-crypto" }
fstart-mmio = { path = "crates/fstart-mmio" }
fstart-services = { path = "crates/fstart-services" }
fstart-capabilities = { path = "crates/fstart-capabilities" }
fstart-alloc = { path = "crates/fstart-alloc" }
fstart-log = { path = "crates/fstart-log" }
fstart-runtime = { path = "crates/fstart-runtime" }
fstart-platform-riscv64 = { path = "crates/fstart-platform-riscv64" }
fstart-platform-aarch64 = { path = "crates/fstart-platform-aarch64" }
fstart-platform-armv7 = { path = "crates/fstart-platform-armv7" }
fstart-arch = { path = "crates/fstart-arch" }
fstart-soc-sunxi = { path = "crates/fstart-soc-sunxi" }
fstart-sunxi-ccu-regs = { path = "crates/fstart-sunxi-ccu-regs" }
fstart-sunxi-pio = { path = "crates/fstart-sunxi-pio" }
fstart-driver-ns16550 = { path = "crates/fstart-driver-ns16550" }
fstart-driver-pl011 = { path = "crates/fstart-driver-pl011" }
fstart-driver-designware-i2c = { path = "crates/fstart-driver-designware-i2c" }
fstart-driver-sunxi-ccu = { path = "crates/fstart-driver-sunxi-ccu" }
fstart-driver-sunxi-a20-dramc = { path = "crates/fstart-driver-sunxi-a20-dramc" }
fstart-driver-sunxi-mmc = { path = "crates/fstart-driver-sunxi-mmc" }
fstart-driver-sunxi-spi = { path = "crates/fstart-driver-sunxi-spi" }
fstart-driver-sunxi-h3-ccu = { path = "crates/fstart-driver-sunxi-h3-ccu" }
fstart-driver-sunxi-h3-dramc = { path = "crates/fstart-driver-sunxi-h3-dramc" }
fstart-driver-sunxi-d1-ccu = { path = "crates/fstart-driver-sunxi-d1-ccu" }
fstart-driver-sunxi-d1-dramc = { path = "crates/fstart-driver-sunxi-d1-dramc" }
fstart-driver-sifive-uart = { path = "crates/fstart-driver-sifive-uart" }
fstart-driver-fu740-prci = { path = "crates/fstart-driver-fu740-prci" }
fstart-driver-fu740-ddr = { path = "crates/fstart-driver-fu740-ddr" }
fstart-driver-pci-ecam = { path = "crates/fstart-driver-pci-ecam" }
fstart-driver-bochs-display = { path = "crates/fstart-driver-bochs-display" }
fstart-device-registry = { path = "crates/fstart-device-registry" }
fstart-crabefi = { path = "crates/fstart-crabefi" }
fstart-stage = { path = "crates/fstart-stage" }
fstart-fit = { path = "crates/fstart-fit" }
fstart-acpi = { path = "crates/fstart-acpi" }
fstart-smbios = { path = "crates/fstart-smbios" }
fstart-pio = { path = "crates/fstart-pio" }
fstart-platform-x86_64 = { path = "crates/fstart-platform-x86_64" }
fstart-driver-qemu-fw-cfg = { path = "crates/fstart-driver-qemu-fw-cfg" }
fstart-driver-q35-hostbridge = { path = "crates/fstart-driver-q35-hostbridge" }
fstart-superio = { path = "crates/fstart-superio" }
fstart-driver-ite8721f = { path = "crates/fstart-driver-ite8721f" }
fstart-driver-intel-pineview = { path = "crates/fstart-driver-intel-pineview" }
fstart-driver-intel-ich7 = { path = "crates/fstart-driver-intel-ich7" }
fstart-driver-i2c-ck505 = { path = "crates/fstart-driver-i2c-ck505" }

[profile.dev]
panic = "abort"

# Crypto crates are unusably slow at opt-level 0 (minutes for a single
# Ed25519 verify on emulated RISC-V).  Always compile them with optimizations.
[profile.dev.package.ed25519-dalek]
opt-level = 2
[profile.dev.package.curve25519-dalek]
opt-level = 2
[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.sha3]
opt-level = 2
[profile.dev.package.p256]
opt-level = 2

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
#strip = "symbols"

# Crypto crates need speed-optimized codegen even in size-optimized release
# builds.  opt-level "s"/"z" can be orders of magnitude slower for scalar
# multiplication on soft-float targets (emulated RISC-V, etc.).
[profile.release.package.ed25519-dalek]
opt-level = 2
[profile.release.package.curve25519-dalek]
opt-level = 2
[profile.release.package.sha2]
opt-level = 2
[profile.release.package.sha3]
opt-level = 2
[profile.release.package.p256]
opt-level = 2
