[package]
name = "fstart-builder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
devicetree-tool.workspace = true
ed25519-dalek = { workspace = true, default-features = true, features = ["rand_core"] }
fdt.workspace = true
fstart-fs = { version = "0.1.0", path = "../fs" }
ml-dsa = { workspace = true, default-features = true }
rand_core.workspace = true
signature.workspace = true
tempfile.workspace = true
vm-fdt.workspace = true
zerocopy = { workspace = true, features = ["derive"] }

[features]
