[package]
name = "fstart-console"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = { workspace = true, optional = true }
embassy-executor = { workspace = true, optional = true }
embassy-sync.workspace = true
heapless.workspace = true
log.workspace = true

[features]
default = [ "block-con" ]
block-con = [ ]
fun-con = [ "dep:embassy-executor" ]
test = [ "critical-section/std" ]
thread-unsafe = [ ]
