[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
goblin = { workspace = true }
fstart-types = { workspace = true, features = ["std"] }
fstart-codegen = { workspace = true }
fstart-ffs = { workspace = true, features = ["std"] }
fstart-fit = { workspace = true, features = ["std"] }
fstart-crypto = { workspace = true, features = ["all"] }
ed25519-dalek = { workspace = true, features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
