[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
goblin = { workspace = true }
fstart-types = { workspace = true, features = ["std"] }
fstart-codegen = { workspace = true }
fstart-device-registry = { workspace = true, features = ["all-drivers"] }
fstart-acpi = { workspace = true, features = ["x86"] }
fstart-driver-intel-pineview = { workspace = true, features = ["acpi"] }
fstart-driver-intel-ich7 = { workspace = true, features = ["acpi"] }
fstart-driver-ite8721f = { workspace = true, features = ["acpi"] }
fstart-services = { workspace = true }
fstart-ffs = { workspace = true, features = ["std"] }
fstart-fit = { workspace = true, features = ["std"] }
fstart-crypto = { workspace = true, features = ["all"] }
fstart-smm-image = { workspace = true }
ed25519-dalek = { workspace = true, features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
