[package]
name = "fstart-acpi"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["arm"]
std = []
arm = []
x86 = []

[dependencies]
acpi_tables = "0.2"
fstart-types = { path = "../fstart-types" }
fstart-acpi-macros = { path = "../fstart-acpi-macros" }
tock-registers = { workspace = true }

[dev-dependencies]
fstart-mmio = { path = "../fstart-mmio" }
