[package]
name = "fstart-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# FFS support for SigVerify, StageLoad, PayloadLoad
ffs = ["dep:fstart-ffs", "dep:fstart-types"]
# Crypto feature forwarding (needed for FFS verification in firmware)
ed25519 = ["ffs", "fstart-ffs/ed25519"]
sha2-digest = ["ffs", "fstart-ffs/sha2-digest"]
sha3-digest = ["ffs", "fstart-ffs/sha3-digest"]
# LZ4 decompression for compressed segments (uses fstart-ffs built-in decompressor)
lz4 = ["ffs"]
# FDT preparation for Linux boot (needs alloc via fstart-alloc)
fdt = ["dep:dtoolkit"]
# FIT image parsing at runtime
fit = ["ffs", "dep:fstart-fit"]

[dependencies]
fstart-log = { workspace = true }
fstart-services = { workspace = true }
ufmt = { workspace = true }
fstart-ffs = { workspace = true, optional = true }
fstart-types = { workspace = true, optional = true }
fstart-fit = { workspace = true, optional = true }
dtoolkit = { workspace = true, optional = true, features = ["write"] }
