[package]
name = "fstart-device-registry"
description = "Aggregates all driver configurations for codegen (host-only std crate)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fstart-services = { path = "../fstart-services" }
fstart-types = { path = "../fstart-types" }
serde = { version = "1.0", features = ["derive"] }

# Optional driver dependencies - enabled by features
fstart-driver-ns16550 = { path = "../fstart-driver-ns16550", optional = true }
fstart-driver-pl011 = { path = "../fstart-driver-pl011", optional = true }
fstart-driver-designware-i2c = { path = "../fstart-driver-designware-i2c", optional = true }
fstart-driver-sunxi-ccu = { path = "../fstart-driver-sunxi-ccu", optional = true }
fstart-driver-sunxi-a20-dramc = { path = "../fstart-driver-sunxi-a20-dramc", optional = true }
fstart-driver-sunxi-mmc = { path = "../fstart-driver-sunxi-mmc", optional = true }
fstart-driver-sunxi-spi = { path = "../fstart-driver-sunxi-spi", optional = true }
fstart-driver-sunxi-h3-ccu = { path = "../fstart-driver-sunxi-h3-ccu", optional = true }
fstart-driver-sunxi-h3-dramc = { path = "../fstart-driver-sunxi-h3-dramc", optional = true }
fstart-driver-sunxi-d1-ccu = { path = "../fstart-driver-sunxi-d1-ccu", optional = true }
fstart-driver-sunxi-d1-dramc = { path = "../fstart-driver-sunxi-d1-dramc", optional = true }
fstart-driver-sifive-uart = { path = "../fstart-driver-sifive-uart", optional = true }
fstart-driver-fu740-prci = { path = "../fstart-driver-fu740-prci", optional = true }
fstart-driver-fu740-ddr = { path = "../fstart-driver-fu740-ddr", optional = true }
fstart-driver-pci-ecam = { path = "../fstart-driver-pci-ecam", optional = true }
fstart-driver-bochs-display = { path = "../fstart-driver-bochs-display", optional = true }

[features]
# Driver feature flags - enable to include that driver in the registry
default = []
ns16550 = ["dep:fstart-driver-ns16550"]
pl011 = ["dep:fstart-driver-pl011"]
designware-i2c = ["dep:fstart-driver-designware-i2c"]
sunxi-a20-ccu = ["dep:fstart-driver-sunxi-ccu"]
sunxi-a20-dramc = ["dep:fstart-driver-sunxi-a20-dramc"]
sunxi-mmc = ["dep:fstart-driver-sunxi-mmc"]
sunxi-spi = ["dep:fstart-driver-sunxi-spi"]
sunxi-h3-ccu = ["dep:fstart-driver-sunxi-h3-ccu"]
sunxi-h3-dramc = ["dep:fstart-driver-sunxi-h3-dramc"]
sunxi-d1-ccu = ["dep:fstart-driver-sunxi-d1-ccu"]
sunxi-d1-dramc = ["dep:fstart-driver-sunxi-d1-dramc"]
sifive-uart = ["dep:fstart-driver-sifive-uart"]
fu740-prci = ["dep:fstart-driver-fu740-prci"]
fu740-ddr = ["dep:fstart-driver-fu740-ddr"]
pci-ecam = ["dep:fstart-driver-pci-ecam"]
bochs-display = ["dep:fstart-driver-bochs-display"]

# Meta-feature to enable all drivers (used by codegen on host)
all-drivers = [
    "ns16550",
    "pl011",
    "designware-i2c",
    "sunxi-a20-ccu",
    "sunxi-a20-dramc",
    "sunxi-mmc",
    "sunxi-spi",
    "sunxi-h3-ccu",
    "sunxi-h3-dramc",
    "sunxi-d1-ccu",
    "sunxi-d1-dramc",
    "sifive-uart",
    "fu740-prci",
    "fu740-ddr",
    "pci-ecam",
    "bochs-display",
]
