[package]
name = "fstart-driver-intel-ich7"
description = "Intel ICH7 (I/O Controller Hub 7) southbridge driver — RCBA, LPC, PIRQ, function disable"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
acpi = ["dep:fstart-acpi", "dep:fstart-acpi-macros"]

[dependencies]
fstart-acpi = { workspace = true, features = ["x86"], optional = true }
fstart-acpi-macros = { path = "../fstart-acpi-macros", optional = true }
fstart-ecam = { workspace = true }
fstart-gpio-ich = { workspace = true }
fstart-hda = { workspace = true }
heapless = { workspace = true }
fstart-log = { workspace = true }
fstart-mmio = { workspace = true }
fstart-pineview-regs = { workspace = true }
fstart-pio = { workspace = true }
fstart-pmio-ich = { workspace = true }
fstart-services = { workspace = true }
fstart-smbus-intel = { workspace = true }
fstart-superio = { workspace = true }
serde = { workspace = true }
ufmt = { workspace = true }
