[package]
name = "fstart-driver-intel-ich8"
description = "Intel ICH8/ICH8-M southbridge driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
acpi = ["dep:fstart-acpi", "dep:fstart-acpi-macros"]

[dependencies]
fstart-arch-x86.workspace = true
fstart-acpi = { workspace = true, features = ["x86"], optional = true }
fstart-acpi-macros = { path = "../fstart-acpi-macros", optional = true }
fstart-ecam = { workspace = true }
fstart-gpio-ich = { workspace = true }
fstart-hda = { workspace = true }
fstart-log = { workspace = true }
fstart-mmio = { workspace = true }
fstart-pio = { workspace = true }
fstart-pmio-ich = { workspace = true }
fstart-services = { workspace = true }
fstart-smbus-intel = { workspace = true }
fstart-superio = { workspace = true }
heapless = { workspace = true }
serde = { workspace = true }
ufmt = { workspace = true }
