[package]
name = "fstart-driver-intel-pineview"
description = "Intel Atom D4xx/D5xx (Pineview) northbridge driver — MCHBAR, DRAM controller, PCI domain root"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
acpi = ["dep:fstart-acpi", "dep:fstart-acpi-macros"]

[dependencies]
fstart-acpi = { workspace = true, features = ["x86"], optional = true }
fstart-acpi-macros = { path = "../fstart-acpi-macros", optional = true }
fstart-ecam = { workspace = true }
heapless = { workspace = true }
fstart-log = { workspace = true }
fstart-mmio = { workspace = true }
fstart-mp = { workspace = true }
fstart-pineview-regs = { workspace = true }
fstart-pio = { workspace = true }
fstart-pmio-ich = { workspace = true }
fstart-services = { workspace = true }
fstart-smm = { workspace = true }
fstart-spd = { workspace = true }
fstart-smbus-intel = { workspace = true }
serde = { workspace = true }
tock-registers = { workspace = true }
ufmt = { workspace = true }
